<resources>
    <string name="app_name">U-Store</string>
    <string name="looking_for_shoes">Looking for shoes</string>
    <string name="popular_shoes">Popular Shoes</string>
    <string name="see_all">see all</string>
    <string name="airmax2014">AirMax2014</string>
    <string name="home">Home</string>
    <string name="fvorite">Fvorite</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="new_shoes">New shoes</string>
    <string name="welcome_back_you_ve_been_missed">welcome Back You\'ve Been Missed!</string>
    <string name="email_addresse">Email Addresse</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="show_password">show password</string>
    <string name="sign_in_with_google">Sign in with google</string>
    <string name="don_t_have_an_account">Don\'t have An Account?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="continues">Continue</string>
    <string name="create_account">Create Account</string>
    <string name="let_s_create_account_together">Let\'s Create Account Together</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="recovery_password">Recovery Password</string>
    <string name="please_enter_your_email_addresse_to_recive_a_verification_code">Please Enter Your Email Addresse To Recive a Verification Code</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="details">Details</string>
    <string name="air_jordan_is_an_american_brand_of_basketball_shoes_athletic_casual_and_style_clothing_produced_by_nike">Air Jordan is an American brand of basketball shoes athletic, casual, and style clothing produced by Nike....</string>
    <string name="_153_99">153.99 €</string>
    <string name="title_from_product">Title from Product</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="check_out">Check Out</string>
    <string name="contact_information">Contact Information</string>
    <string name="_49123456789">+49123456789</string>
    <string name="List">list</string>
    <string name="setting">setting</string>
    <string name="deliverable_to_you_in_2_3_working_days">Deliverable to you in 2-3 working days</string>
    <string name="our_expedition_delivers_to_the_desired_one">our expedition delivers to the desired one</string>
    <string name="installation_location_in_your_home">installation location in your home.</string>
    <string name="general_terms_data_privacy_policy_legal_notice">General terms | Data privacy policy | legal notice</string>
    <string name="buy_on_account_or_in_installments">Buy on account or in installments</string>
    <string name="_30_days_free_returns">30 days free returns</string>
    <string name="default_web_client_id">847342918543-8epkojg35l7n5u09gpjhoukh3gl0vfl1.apps.googleusercontent.com</string>
    <string name="loading">Loading...</string>
</resources>