<LinearLayout
        android:id="@+id/input_pattern"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
            android:id="@+id/label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"

            android:textColor="@color/primaryDark"
            android:gravity="top"

            android:layout_marginBottom="8dp"
            android:text="@string/email_addresse" />

    <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            app:cardCornerRadius="30dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_hint"
                    android:padding="4dp"
                    android:layout_width="wrap_content"
                    android:background="@android:color/transparent"
                    android:layout_height="wrap_content"
                    android:hint="@string/example_gmail_com"
                    android:textSize="12sp"
                    android:textColorHint="@color/hint"
                    tools:ignore="TextSizeCheck,TouchTargetSizeCheck" />
            <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

            <ImageView
                    android:id="@+id/toggle_visibility"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_visibility_off"
                    android:contentDescription="@string/show_password"
                    android:padding="8dp"
                    android:visibility="gone" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>