<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.signin.SignInFragment">


    <TextView
            android:layout_width="wrap_content"
            android:text="Hello Again!"
            android:textColor="@color/primaryDark"
            android:textSize="28dp"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="100dp"
            app:layout_constraintHorizontal_bias="0.498"
            android:id="@+id/textView" />


    <TextView
            android:layout_width="wrap_content"
            android:text="@string/welcome_back_you_ve_been_missed"
            android:textColor="@color/hint"
            android:textSize="14sp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginTop="4dp"
            android:id="@+id/hint_signing" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout_input"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/hint_signing"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="8dp">

        <com.amircodeing.syntaxinstitut.unique_store.utils.CustomInputField
                android:layout_width="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_height="wrap_content"
                android:id="@+id/signIn_userName"/>



        <com.amircodeing.syntaxinstitut.unique_store.utils.CustomInputField
                android:layout_width="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_height="wrap_content"
                android:id="@+id/signInPassword" />

        <TextView
                android:focusable="true"
                android:clickable="true"
                android:id="@+id/recoveryPassword_TV"
                android:layout_width="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="10dp"
                android:padding="5dp"
                android:textColor="@color/textButton"
                android:text="@string/recovery_password"
                android:layout_height="wrap_content"
                android:minHeight="48dp" />


        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:backgroundTint="@color/primaryDark"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="30dp"
                app:cardCornerRadius="30dp">

            <Button
                    android:id="@+id/custom_button_signIn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/selectableItemBackground"
                    android:text="@string/sign_in"
                    android:textColor="@color/white"
                    android:textAllCaps="false"
                    android:gravity="center"
                    android:textSize="18sp"
                    tools:ignore="TouchTargetSizeCheck" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:focusable="true"
                android:clickable="true"
                android:id="@+id/google_signIn"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="40dp"
                android:layout_marginBottom="30dp"
                android:layout_marginEnd="20dp"
                app:cardCornerRadius="50dp"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0">

            <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center">

                <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/google_logo_png" />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:textSize="14sp"
                        android:hint="@string/sign_in_with_google"
                        android:textColor="@color/hint"
                        android:layout_marginStart="4dp" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout5"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout_input"
            app:layout_constraintStart_toStartOf="@+id/linearLayout_input"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout_input"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="horizontal"
            app:layout_constraintHorizontal_bias="0.528"
            app:layout_constraintVertical_bias="0.694">

        <TextView
                android:layout_width="wrap_content"
                android:padding="5dp"
                android:text="@string/don_t_have_an_account"
                android:layout_height="wrap_content" />

        <TextView
                android:id="@+id/signUp_FF_TV"
                android:focusable="true"
                android:clickable="true"
                android:layout_width="wrap_content"
                android:text="Sign Up For Free"
                android:paddingEnd="5dp"
                android:textColor="@color/textButton"
                android:layout_height="wrap_content"
                tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>