<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_height="match_parent"
        tools:context=".presentation.signup.SignUpFragment">


    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        <LinearLayout
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linearLayout_input"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/hint_signing"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp">


            <TextView
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/create_account"
                    android:textColor="@color/primaryDark"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="50dp"
                    app:layout_constraintHorizontal_bias="0.498"
                    android:id="@+id/textView" />


            <TextView
                    android:layout_width="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/let_s_create_account_together"
                    android:textColor="@color/hint"
                    android:textSize="14sp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView"
                    android:layout_marginTop="4dp"
                    android:id="@+id/hint_signing" />


            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/linearLayout5"
                    android:layout_marginTop="30dp"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout_input"
                    app:layout_constraintStart_toStartOf="@+id/linearLayout_input"
                    app:layout_constraintEnd_toEndOf="@+id/linearLayout_input"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:orientation="horizontal"
                    app:layout_constraintHorizontal_bias="0.528"
                    app:layout_constraintVertical_bias="0.694">

                <TextView
                        android:layout_width="wrap_content"
                        android:padding="5dp"
                        android:text="@string/already_have_an_account"
                        android:layout_height="wrap_content" />

                <TextView
                        android:id="@+id/signIn_button_inSignUp"
                        android:layout_width="wrap_content"
                        android:text="@string/sign_in"
                        android:textColor="@color/textButton"
                        android:layout_height="wrap_content" />


            </LinearLayout>

            <LinearLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:gravity="center_horizontal"
                    android:layout_height="wrap_content">

                <View
                        android:id="@+id/divider5"
                        android:layout_marginTop="12dp"
                        android:layout_width="160dp"
                        android:layout_height="1dp"
                        android:background="?android:attr/listDivider" />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:textSize="16sp"
                        android:text="or"
                        android:layout_height="wrap_content" />

                <View
                        android:id="@+id/divider6"
                        android:layout_marginTop="12dp"
                        android:layout_width="160dp"
                        android:layout_height="1dp"
                        android:background="?android:attr/listDivider" />

            </LinearLayout>


            <com.google.android.material.card.MaterialCardView
                    android:layout_width="150dp"
                    app:cardCornerRadius="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:id="@+id/materialCardView">
                <ImageView
                        android:id="@+id/add_image_profile_IV"
                        android:scaleType="centerCrop"
                        android:layout_width="match_parent"
                        android:src="@drawable/icon_iamge_picker"
                        android:layout_height="match_parent"
                        android:contentDescription="TODO" />

            </com.google.android.material.card.MaterialCardView>

            <TextView
                    android:layout_width="wrap_content"
                    android:text="Personal Infrormation"
                    android:textColor="@color/primaryDark"
                    android:textSize="16sp"
                    android:layout_marginBottom="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/hint_signing"
                    android:textStyle="bold"
                    android:layout_marginTop="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.161"
                    android:layout_height="wrap_content" />

            <com.amircodeing.syntaxinstitut.unique_store.utils.CustomInputField
                    android:layout_width="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/signUp_username" />

            <com.amircodeing.syntaxinstitut.unique_store.utils.CustomInputField
                    android:layout_width="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/signUpEmail" />

            <com.amircodeing.syntaxinstitut.unique_store.utils.CustomInputField
                    android:layout_width="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/signUpTel" />


            <com.amircodeing.syntaxinstitut.unique_store.utils.CustomInputField
                    android:layout_width="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/signUpPassword" />

            <ProgressBar
                    android:layout_gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:visibility="invisible"
                    android:indeterminateTint="@color/primaryDark"
                    android:id="@+id/progress_circular_signUp"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:text="Address"
                    android:textColor="@color/primaryDark"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/hint_signing"
                    android:layout_marginTop="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.161"
                    android:layout_height="wrap_content" />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">

                <com.amircodeing.syntaxinstitut.unique_store.utils.CustomInputField
                        android:layout_width="230dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="10dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/signUp_street_ET" />

                <com.amircodeing.syntaxinstitut.unique_store.utils.CustomInputField
                        android:layout_width="70dp"
                        android:inputType="number"

                        android:layout_marginBottom="10dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/signUp_number_ET" />
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">

                <com.amircodeing.syntaxinstitut.unique_store.utils.CustomInputField
                        android:layout_width="150dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginEnd="20dp"
                        android:inputType="number"
                        android:layout_height="wrap_content"
                        android:id="@+id/signUp_zip_ET" />

                <com.amircodeing.syntaxinstitut.unique_store.utils.CustomInputField
                        android:layout_width="150dp"
                        android:layout_marginBottom="10dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/signUp_city_ET" />
            </LinearLayout>

            <com.amircodeing.syntaxinstitut.unique_store.utils.CustomInputField
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/signUp_country_ET" />


            <androidx.cardview.widget.CardView
                    android:id="@+id/signup_custom_button_CV"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:backgroundTint="@color/primaryDark"
                    android:layout_marginTop="30dp"
                    app:cardCornerRadius="30dp">

                <Button
                        android:id="@+id/custom_button_signup"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="?attr/selectableItemBackground"
                        android:text="@string/sign_up"
                        android:textColor="@color/white"
                        android:textAllCaps="false"
                        android:gravity="center"
                        android:textSize="18sp"
                        tools:ignore="TouchTargetSizeCheck" />
            </androidx.cardview.widget.CardView>


            <View
                    android:layout_width="match_parent"
                    android:background="@android:color/transparent"
                    android:layout_height="100dp" />

        </LinearLayout>

    </ScrollView>


</LinearLayout>